Keyboard support for slide menu items in custom panels, and styling fixes to keep scrollbars inside the menu panels

--- a/menu.css
+++ b/menu.css
@@ -19,13 +19,14 @@
 	margin: 0;
 	padding: 0;
 	width: 100%;
+	border-bottom: solid 1px #555;
 }
 
 .reveal .slide-menu-item, 
 .reveal .slide-menu-item-vertical {
 	display: block;
 	text-align: left;
-	padding: 12px 18px;
+	padding: 10px 18px;
 	color: #aaa;
 	cursor: pointer;
 }
@@ -35,11 +36,7 @@
 }
 
 .reveal .slide-menu-item {
-  border-top: solid 1px #666;
-}
-
-.reveal .slide-menu-item:first-child {
-  border-top: none;
+  border-top: solid 1px #555;
 }
 
 .reveal .active-menu-panel li.selected {
@@ -206,12 +203,18 @@
 	color: white;
 }
 
+.reveal .slide-menu-item a {
+	text-decoration: none;
+}
+
 .reveal .slide-menu-custom-panel {
+	width: calc(100% - 20px);
 	padding-left: 10px;
 	padding-right: 10px;
 }
 
 .reveal .slide-menu-custom-panel .slide-menu-items {
+	width: calc(100% + 20px);
 	margin-left: -10px;
 	margin-right: 10px;
 }
@@ -226,7 +229,6 @@
 	display: block;
 	text-align: left;
 	cursor: pointer;
-	padding: 6px 18px;
 	color: #848484;
 }
 
